--- a/index.html
+++ b/index.html
@@ -5,8 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+   
 </head>
 <body>
-    
+   <form method="post" action="apply-now.php">
+       <input name="subject" type="hidden" value="Class"/>
+       <fieldset><legend> Academic Information</legend>
+        <label for="degree">Degree</label> 
+        <select name="degree" id="degree">
+                <option value="BA">Bachelor of Art</option>
+                <option value="BS"> Bachelor of Science</option>
+                <option value="MBA" selected="selected">Master of Business Administration</option>
+        </select>
+        <br/>
+        <label for="studentid">Student ID</label>
+        <input type="password" name="studentid"/>
+    </fieldset>
+    <fieldset><legend>Personal Details</legend>
+    <label for="fname">First Name</label>
+    <input type="text" name="fname" id="fname" />
+    <br />
+    <label for="lname">Last Name</label>
+    <input type="text" name="lname" id="lname" /><br />
+    Gender:
+    <input name="gender" type="radio" id="gm" value="m" />
+    <label for="gm">Male</label>
+    <input name="gender" type="radio" id="gf" value="f" />
+    <label for="gf">Female</label>
+<br />
+<label for="email">Email</label>
+<input type="text" name="email" id="email" />
+<p>
+    <textarea name="terms" cols="30" rows="4" readonly="readonly">TERMS AND CONDITIONS...</textarea>
+</p>
+<p>
+    <input type="submit" name="submit" value="Send Form" />
+    <input type="reset" value="Clear Form" />
+</p>
+
+    </fieldset> <br>
+        
+
+
+
+
+
+
+
+   </form>
+   
 </body>
 </html>
